<resources>
    <string name="app_name">NetMapper</string>
    <string name="cameraBtnDesc">Button to open camera activity</string>
    <string name="tagImageDesc">Image to tag</string>
    <string name="shimmerPlaceholderImg">Shimmer placeholder for example image</string>
    <string name="exampleImg">Example image</string>
    <string name="submissionImageDesc">Submission image</string>
    <string name="continueBtn">CONTINUE</string>
    <string name="submitBtn">SUBMIT</string>
    <string name="submittingBtn">SUBMITTING…</string>
    <string name="networkType">Type of network infrastructure</string>
    <string name="descInfo">Descriptive information</string>
    <string name="comments">Comments</string>
    <string name="home">Home</string>
    <string name="examples">Examples</string>
    <string name="examples_intro">NetMapper allows you to submit images of different network infrastructure markers. Here are some information about these markers to help you better identify them in the wild!</string>
    <string name="loading">Loading…</string>
    <string name="learnMoreBtn">LEARN MORE</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="locationPermissionRationale">NetMapper needs access to location services to map network infrastructures. You will not be associated with the location data by any means!</string>
    <string name="tagInstruction">Circles/boxes the network infrastructure in the picture with your finger!</string>
</resources>